--- a/VehicleRental/src/main/resources/application.properties
+++ b/VehicleRental/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/VehicleRental
 spring.datasource.username=postgres
-spring.datasource.password=Ash28121998
+spring.datasource.password=root
 
 logging.level.com.vehicleRental=TRACE
 logging.pattern.console=%d [%level] %c{1.} [%t] %m%n
